delivery kpi html

--- a/app/assets/add-manage-user.html
+++ b/app/assets/add-manage-user.html
@@ -48,7 +48,7 @@
     </div>
     <div class="middle clearfix">
         <div class="add-user-left" id="add-user-left">
-            <h4 class="text-center normal-blue">基本信息</h4>
+            <!--<h4 class="text-center normal-blue">基本信息</h4>-->
             <p>*姓名</p>
             <input type="text" id="new-user-name"/>
             <p>*邮箱</p>
@@ -75,40 +75,6 @@
                 role,dasdsadasdasasaSAsaSAsaSASASAsASas
             </label>
             <p class="hide text-center text-warning" id="add-warn"></p>
-        </div>
-        <div class="add-user-right" id="add-user-right">
-            <h4 class="text-center normal-blue">用户的KPI</h4>
-            <div class="user-kpi " id="user-kpi">
-                <p onclick="remove_userkpi(event)">das</p>
-            </div>
-            <a class="btn btn-primary show-allKpi" id="show-allKpi" onclick="show_allKpi(event)" state="off">
-                挑选KPI <i class=" icon-chevron-down icon-white" onclick="show_allKpi(event)"></i>
-            </a>
-            <div id="all-kpi" style="display:none">
-            <h4 class="text-center">所有的KPI</h4>
-            <table class="all-kpi  table-bordered table-striped">
-               <tr>
-                   <th width="200px">名称</th>
-                   <th>描述</th>
-               </tr>
-               <tr id="kpi1" onclick="choose_kpi(event)">
-                   <td class="kpi-name">kpi11</td>
-                   <td>asdsadsa</td>
-               </tr>
-                <tr id="kpi2" onclick="choose_kpi(event)">
-                    <td class="kpi-name">kpi2</td>
-                    <td>asdsadsa</td>
-                </tr>
-                <tr id="kpi3" onclick="choose_kpi(event)">
-                    <td class="kpi-name">kpi3</td>
-                    <td>asdsadsa</td>
-                </tr>
-                <tr id="kpi4" onclick="choose_kpi(event)">
-                    <td class="kpi-name">kpi45</td>
-                    <td>asdsadsa</td>
-                </tr>
-            </table>
-            </div>
         </div>
 
     </div>
