--- a/app/assets/manage-user.html
+++ b/app/assets/manage-user.html
@@ -116,7 +116,7 @@
                     <th min-width="221px">邮箱</th>
                     <th>组</th>
                     <th>角色</th>
-                    <th width="100px" colspan="2">操作</th>
+                    <th width="100px" colspan="3">操作</th>
                 </tr>
                 <tr id="1">
                     <td align="center" class="kpi-order-id">1</td>
@@ -124,15 +124,18 @@
                     <td align="center" class="manage-userMail">zixiao.wang@cz-tek.com</td>
                     <td align="center" class="manage-userEntity">entity1</td>
                     <td align="center" class="manage-userRole">user</td>
-                    <td align="center"><div class="manage-operate manage-operate-edit" data-belong="1" onclick="to_userPage('edit')"></div>
-                        <!--<a class="btn btn-success manage-operate-reverse  hide" data-belong="1" onclick="finish_editUser(event)">完成</a>-->
+                    <td align="center">
+                        <div class="manage-operate manage-operate-edit" title="编辑" data-belong="1" onclick="to_userPage(event)"></div>
                     </td>
-                    <td align="center"><div class="manage-operate manage-operate-del" data-belong="1" onclick="remove_userItem(event)"></div>
-                        <!--<a class="btn manage-operate-reverse  hide" id="cancel-edit-user" data-belong="1" onclick="cancel_editUser(event)">取消</a>-->
+                    <td align="center">
+                        <div class="manage-operate manage-operate-delivery" title="分配KPI" data-belong="1" onclick="delivery_kpi(event)"></div>
+                    </td>
+                    <td align="center">
+                        <div class="manage-operate manage-operate-del" title="删除" data-belong="1" onclick="remove_userItem(event)"></div>
                     </td>
                 </tr>
             </table>
-            <a class="btn manage-add-btn btn-primary pull-right" onclick="to_userPage('add')" data-manage="user">添加用户</a>
+            <a class="btn manage-add-btn btn-primary pull-right" onclick="to_userPage(event)" type="add" data-manage="user">添加用户</a>
         </div>
     </div>
 
