fix blank option

--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -132,7 +132,7 @@
                         <input type="checkbox" class="is-calcu-check" id="is-calcu-check" onclick="is_calcu()"/>
                         <div class="is-calcu-type clearfix" id="is-calcu-type" style="display:none">
                             <select id="is-calcu-relate" class="calcuRelate-kpi" onchange="select_calcuRelate()">
-                                <option data-order="1" class="empty-option" selected="selected" style="display:none"> </option>
+                                <option data-order="1" class="empty-option" selected="selected"> </option>
                                 <option data-order="2" id="k1">KPI 1</option>
                                 <option data-order="3" id="k2">KPI 2</option>
                             </select>
