--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -49,10 +49,10 @@
         <div class="left-category pull-left">
             <ul class="manage-group" id="manage-group-kpi">
                 <li><h3 class="no-margin">类别</h3></li>
-                <li class="active"><a href="">默认</a></li>
-                <li><a href="">entity1</a></li>
-                <li><a href="">entity2</a></li>
-                <li><a href="">entity3</a></li>
+                <li class="active"><i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i><a href="">默认</a></li>
+                <li><a href=""><i class="icon-remove hide pull-left"></i>entity1</a></li>
+                <li><a href=""><i class="icon-remove hide pull-left"></i>entity2</a></li>
+                <li><a href=""><i class="icon-remove hide pull-left"></i>entity3</a></li>
                 <li><button class="btn btn-primary" onclick="create_entityBlock()">创建新类别</button></li>
                 <div class="absolute creat-entity-block hide" id="creatEntity-block">
                     <p>创建新类别</p>
