--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -49,9 +49,9 @@
         <div class="left-category pull-left">
             <ul class="manage-group" id="manage-group-kpi">
                 <li><h3 class="no-margin">类别</h3></li>
-                <li class="active"><i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i><a href="">默认</a></li>
+                <li><i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i><a href="">默认</a></li>
                 <li><a href=""><i class="icon-remove hide pull-left"></i>entity1</a></li>
-                <li><a href=""><i class="icon-remove hide pull-left"></i>entity2</a></li>
+                <li class="active"><a href=""><i class="icon-remove hide pull-left"></i>entity2</a></li>
                 <li><a href=""><i class="icon-remove hide pull-left"></i>entity3</a></li>
                 <li><button class="btn btn-primary" onclick="create_entityBlock()">创建新类别</button></li>
                 <div class="absolute creat-entity-block hide" id="creatEntity-block">
@@ -70,9 +70,9 @@
                     <td>
                         <select id="add-entity">
                             <option data-order="1" selected="selected">默认</option>
-                            <option data-order="2">KPI 1</option>
-                            <option data-order="3">KPI 2</option>
-                            <option data-order="4">KPI 3</option>
+                            <option data-order="2">entity1</option>
+                            <option data-order="3">entity2</option>
+                            <option data-order="4">entity3</option>
                         </select>
                     </td>
                 </tr>
