--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -50,30 +50,35 @@
             <ul class="manage-group" id="manage-group-kpi">
                 <li><h3 class="no-margin">类别</h3></li>
                 <li>
-                    <i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <i class="icon-pencil hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <a href="">默认</a>
+                    <i class="icon-remove hide pull-left" number="1" belong="kpi" onclick="remove_leftNav(event)"></i>
+                    <i class="icon-pencil hide pull-left" number="1" belong="kpi" onclick="edit_leftNav(event)"></i>
+                    <a number="1" belong="kpi" href="">默认</a>
                 </li>
                 <li>
-                    <i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <i class="icon-pencil hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <a href="">entity1</a>
+                    <i class="icon-remove hide pull-left" number="2" belong="kpi" onclick="remove_leftNav(event)"></i>
+                    <i class="icon-pencil hide pull-left" number="2" belong="kpi" onclick="edit_leftNav(event)"></i>
+                    <a number="2" belong="kpi" href="">entity1</a>
                 </li>
                 <li class="active">
-                    <i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <i class="icon-pencil hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <a href="">entity2</a>
+                    <i class="icon-remove hide pull-left" number="3" belong="kpi" onclick="remove_leftNav(event)"></i>
+                    <i class="icon-pencil hide pull-left" number="3" belong="kpi" onclick="edit_leftNav(event)"></i>
+                    <a number="3" belong="kpi" href="">entity2</a>
                 </li>
                 <li>
-                    <i class="icon-remove hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <i class="icon-pencil hide pull-left" onclick="remove_leftNav(event)"></i>
-                    <a href="">entity3</a>
+                    <i class="icon-remove hide pull-left" number="4" belong="kpi" onclick="remove_leftNav(event)"></i>
+                    <i class="icon-pencil hide pull-left" number="4" belong="kpi" onclick="edit_leftNav(event)"></i>
+                    <a number="4" belong="kpi" href="">entity3</a>
                 </li>
                 <li><button class="btn btn-primary" onclick="create_entityBlock()">创建新类别</button></li>
                 <div class="absolute creat-entity-block hide" id="creatEntity-block">
                     <p>创建新类别</p>
                     <i class="icon-remove pull-right" onclick="close_createEntity()"></i>
                     <input type="text" id="creat-newEntity" onkeyup="create_entity(event)"/>
+                </div>
+                <div class="absolute creat-entity-block hide" id="edit-block">
+                    <p>修改</p>
+                    <i class="icon-remove pull-right" onclick="close_editBlock()"></i>
+                    <input type="text" id="change-leftNavi" onkeyup="change_leftNavi(event)"/>
                 </div>
             </ul>
         </div>
@@ -205,8 +210,10 @@
             <a class="btn manage-add-btn btn-primary pull-right" onclick="show_addBlock(event)" data-manage="kpi">添加KPI</a>
         </div>
     </div>
-
 </div>
+
+
+
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
 <script src="javascripts/highcharts.js"></script>
