--- a/app/assets/delivery-kpi.html
+++ b/app/assets/delivery-kpi.html
@@ -47,101 +47,9 @@
         <h3 class="text-center inline-block add-user-mark">分配KPI</h3>
     </div>
     <div class="middle clearfix">
-            <div class="my-kpi pull-left">
-                <h3 class="normal-blue text-center">该用户已有的KPI</h3>
-                <table class="table-bordered table-bordered table-striped" id="my-kpi">
-                    <tr>
-                        <th>类别</th>
-                        <th>名字</th>
-                        <th width="150px">描述</th>
-                        <th>目标值</th>
-                        <th>单位</th>
-                        <th>周期</th>
-                    </tr>
-                </table>
-                <label class="pull-right deliverKpi-introMark">点击单项删除</label>
-            </div>
-            <div class="all-kpi pull-right">
-                <h3 class="text-center">所有的KPI</h3>
-                <table class="table-bordered table-striped" id="all-kpi">
-                    <tr>
-                        <th>类别</th>
-                        <th>名字</th>
-                        <th width="150px">描述</th>
-                        <th>目标值</th>
-                        <th>单位</th>
-                        <th>周期</th>
-                    </tr>
-                    <tr onclick="choose_kpi(event)" id="kpi1">
-                        <td class="deliveryKpi-entity">group1</td>
-                        <td class="deliveryKpi-name">name</td>
-                        <td class="deliveryKpi-desc" width="150px">asdsajdhsakdhlas</td>
-                        <td class="deliveryKpi-target">1000</td>
-                        <td class="deliveryKpi-unit">m</td>
-                        <td class="deliveryKpi-interval">日</td>
-                    </tr>
-                    <tr onclick="choose_kpi(event)" id="kpi2">
-                        <td class="deliveryKpi-entity">group2</td>
-                        <td class="deliveryKpi-name">name</td>
-                        <td class="deliveryKpi-desc" width="150px">asdsajdhsakdhlas</td>
-                        <td class="deliveryKpi-target">1000</td>
-                        <td class="deliveryKpi-unit">m</td>
-                        <td class="deliveryKpi-interval">日</td>
-                    </tr>
-                    <tr onclick="choose_kpi(event)" id="kpi3">
-                        <td class="deliveryKpi-entity">group3</td>
-                        <td class="deliveryKpi-name">name</td>
-                        <td class="deliveryKpi-desc" width="150px">asdsajdhsakdhlas</td>
-                        <td class="deliveryKpi-target">1000</td>
-                        <td class="deliveryKpi-unit">m</td>
-                        <td class="deliveryKpi-interval">日</td>
-                    </tr>
-                    <tr onclick="choose_kpi(event)" id="kpi4">
-                        <td class="deliveryKpi-entity">group4</td>
-                        <td class="deliveryKpi-name">name</td>
-                        <td class="deliveryKpi-desc" width="150px">asdsajdhsakdhlas</td>
-                        <td class="deliveryKpi-target">1000</td>
-                        <td class="deliveryKpi-unit">m</td>
-                        <td class="deliveryKpi-interval">日</td>
-                    </tr>
-                </table>
-                <label class="pull-right deliverKpi-introMark">点击单项添加</label>
-            </div>
+        <div class="delivert-part">
 
-        <!--<div class="add-user-right" id="add-user-right">-->
-        <!--<h4 class="text-center normal-blue">用户的KPI</h4>-->
-        <!--<div class="user-kpi " id="user-kpi">-->
-        <!--<p onclick="remove_userkpi(event)">das</p>-->
-        <!--</div>-->
-        <!--<a class="btn btn-primary show-allKpi" id="show-allKpi" onclick="show_allKpi(event)" state="off">-->
-        <!--挑选KPI <i class=" icon-chevron-down icon-white" onclick="show_allKpi(event)"></i>-->
-        <!--</a>-->
-        <!--<div id="all-kpi" style="display:none">-->
-        <!--<h4 class="text-center">所有的KPI</h4>-->
-        <!--<table class="all-kpi  table-bordered table-striped">-->
-        <!--<tr>-->
-        <!--<th width="200px">名称</th>-->
-        <!--<th>描述</th>-->
-        <!--</tr>-->
-        <!--<tr id="kpi1" onclick="choose_kpi(event)">-->
-        <!--<td class="kpi-name">kpi11</td>-->
-        <!--<td>asdsadsa</td>-->
-        <!--</tr>-->
-        <!--<tr id="kpi2" onclick="choose_kpi(event)">-->
-        <!--<td class="kpi-name">kpi2</td>-->
-        <!--<td>asdsadsa</td>-->
-        <!--</tr>-->
-        <!--<tr id="kpi3" onclick="choose_kpi(event)">-->
-        <!--<td class="kpi-name">kpi3</td>-->
-        <!--<td>asdsadsa</td>-->
-        <!--</tr>-->
-        <!--<tr id="kpi4" onclick="choose_kpi(event)">-->
-        <!--<td class="kpi-name">kpi45</td>-->
-        <!--<td>asdsadsa</td>-->
-        <!--</tr>-->
-        <!--</table>-->
-        <!--</div>-->
-        <!--</div>-->
+        </div>
 
     </div>
 
