--- a/app/assets/add-manage-user.html
+++ b/app/assets/add-manage-user.html
@@ -41,12 +41,33 @@
         </ul>
         <a class="btn btn-success btn-navi pull-right" href="">输入 KPI</a>
     </div>
+
+
+
+
+
+
+    <!--导航的sub middle-->
     <div class="sub-middle sub-middle-manage">
-        <a class="btn btn-addUser" onclick="window.history.go(-1)">返回</a>
-        <a class="btn btn-primary btn-addUser" onclick="post_newUser()">完成</a>
-        <h3 class="text-center inline-block add-user-mark" data-type="add" id="add-user-mark"></h3>
+        <a class="btn btn-addUser btn-manageUser" onclick="window.history.go(-1)">返回</a>
+        <ul class="nav nav-tabs manage-userTab">
+            <li class="active">
+                <a href="#">添加用户</a>
+            </li>
+            <li><a href="#">编辑用户</a></li>
+            <li><a href="#">分配权限</a></li>
+        </ul>
     </div>
+
+
+
+
     <div class="middle clearfix">
+
+
+
+
+
         <div class="add-user-left" id="add-user-left">
             <!--<h4 class="text-center normal-blue">基本信息</h4>-->
             <p>*姓名</p>
