--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -198,7 +198,7 @@
                     <td align="center" class="kpi-target">2000</td>
                     <td align="center">$</td>
                     <td align="center">上升</td>
-                    <td align="center">否</td>
+                    <td align="center"  class="kpi-checked">否</td>
                     <td align="center"><div class="manage-operate manage-operate-edit" data-belong="1" onclick="edit_kpiItem(event)"></div>
                         <a class="btn btn-success manage-operate-reverse  hide" data-belong="1" onclick="finish_editKPI(event)">完成</a>
                     </td>
