--- a/app/assets/edit-manage-user.html
+++ b/app/assets/edit-manage-user.html
@@ -18,6 +18,9 @@
             <a class="tool-help" data-placement="bottom" data-animation=false id="tool-help" title="帮助"> </a>
             <a class="tool-user" data-placement="bottom" data-animation=false id="tool-user" title="账户"> </a>
         </div>
+        <!--<ul class="setting-navi pull-right">-->
+        <!--<li><a >Hello Wayne</a></li>-->
+        <!--</ul>-->
     </div>
     <div class="page-navi clearfix">
         <ul class="main-navi pull-left">
@@ -42,6 +45,8 @@
 
 
 
+
+
     <!--导航的sub middle-->
     <div class="sub-middle sub-middle-manage">
         <a class="btn btn-addUser btn-manageUser" onclick="window.history.go(-1)">返回</a>
@@ -49,8 +54,12 @@
             <li>
                 <a href="#">添加用户</a>
             </li>
-            <li><a href="#">编辑用户</a></li>
-            <li class="active"><a href="#">分配权限</a></li>
+            <li class="active">
+                <a href="#">编辑用户</a>
+            </li>
+            <li>
+                <a href="#">分配权限</a>
+            </li>
         </ul>
     </div>
 
@@ -61,74 +70,37 @@
 
 
 
-        <!--delivery part-->
-        <div class="delivery-part">
-             <p class="inline">类别:</p>
-             <select class="delivery-entity" id="delivery-entity">
-                 <option value="1">全部</option>
-                 <option value="2">类别1</option>
-                 <option value="3">类别2</option>
-                 <option value="4">类别3</option>
-             </select>
-            <br />
-            <p class="inline">KPI:</p>
-            <select class="delivery-kpi" id="delivery-kpi">
-                <option value="1">全部</option>
-                <option value="2">KPI1</option>
-                <option value="3">KPI2</option>
-                <option value="4">KPI3</option>
+
+
+        <div class="add-user-left" id="add-user-left">
+            <!--<h4 class="text-center normal-blue">基本信息</h4>-->
+            <p>*姓名</p>
+            <input type="text" id="new-user-name"/>
+            <p>*邮箱</p>
+            <input type="text" id="new-user-mail"/>
+            <p>*组</p>
+            <select id="new-user-entity">
+                <option data-order="1" selected="selected">entity1</option>
+                <option data-order="2">entity2</option>
+                <option data-order="3">entity3</option>
             </select>
-            <a class="btn btn-wzx btn-primary pull-right" onclick="delivery_Kpi()">分配</a>
+            <p>*权限</p>
+            <label class="radio">
+                <input type="radio" name="optionsRadios" data-role="1" checked>
+                role,dasdsadasdasasaSAsaSAsaSASASAsASas
+            </label>
+            <label class="radio">
+                <input type="radio" name="optionsRadios" data-role="2">
+                role,dasdsadasdasasaSAsaSAsaSASASAsASas
+            </label>
+            <label class="radio">
+                <input type="radio" name="optionsRadios" data-role="3">
+                role,dasdsadasdasasaSAsaSAsaSASASAsASas
+            </label>
+            <p class="hide text-center text-warning" id="add-warn"></p>
         </div>
-        <h3 class="normal-blue text-center delivery-mykpiMark">该用户的KPI</h3>
-        <table class="manage-kpi" id="kpi-table">
-            <tr>
-                <th>ID</th>
-                <th>类别</th>
-                <th>名称</th>
-                <th width="221px">描述</th>
-                <th>周期</th>
-                <th>目标值</th>
-                <th>单位</th>
-                <th>方向</th>
-                <th width="50px">计算型</th>
-                <th width="50px" colspan="2">操作</th>
-            </tr>
-            <tr id="1">
-                <td align="center" class="kpi-order-id">1</td>
-                <td align="center">entity1</td>
-                <td align="center">KPI 1</td>
-                <td align="center">desc</td>
-                <td align="center">日</td>
-                <td align="center" class="kpi-target">2000</td>
-                <td align="center">$</td>
-                <td align="center">上升</td>
-                <td align="center">否</td>
-                <td align="center"><div class="manage-operate manage-operate-edit" data-belong="1" onclick="edit_delivery(event)"></div>
-                    <a class="btn btn-success manage-operate-reverse  hide" data-belong="1" onclick="finish_editDelivery(event)">完成</a>
-                </td>
-                <td align="center"><div class="manage-operate manage-operate-del" data-belong="1" onclick="remove_delivery(event)"></div>
-                    <a class="btn manage-operate-reverse  hide" id="cancel-edit-kpi-1" data-belong="1" onclick="cancel_editDelivery(event)">取消</a>
-                </td>
-            </tr>
-        </table>
-
-
-
-
-
 
     </div>
-
-
-
-
-
-
-
-
-
-
 
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
