--- a/app/assets/register.html
+++ b/app/assets/register.html
@@ -23,7 +23,7 @@
     <div class="login-sub-middle clearfix">
         <form class="login-form">
             <div id="error_explanation" class="error_explanation ">
-                <h4>gdgd</h4>
+                <h4>Oops..something wrong with your input</h4>
                 <ul>
                     <li>asdasd</li>
                     <li>asdasd</li>
